--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,14 @@
             <version>3.0.5</version>
         </dependency>
 
+        <!--Stripe Integration-->
+        <!-- https://mvnrepository.com/artifact/com.stripe/stripe-java -->
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>27.1.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
